# CnF-Infinity

./: Cargo.toml  README.md
.github/: FUNDING.yml
src/: main.rs
