[package]
name = "cnf_infinity"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = "0.4"
dioxus-desktop = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "=0.11.3"
uuid = { version = "1.5", features = ["v4"] }
eframe = "0.31.1"
egui = "0.31.1"
rand = "0.8"
